# gdc-apps-lakebase-capstone

./: .gitignore  CAPSTONE_TASKS.md  databricks.yml
app/: app.yaml  package-lock.json  pyproject.toml  requirements.txt  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/backend/: auth.py  db.py  main.py
app/backend/routers/: customers.py  genie.py  jobs.py
app/backend/static/: index.html
app/backend/static/assets/: index-BwlaK2zP.js  index-BwlaK2zP.js.map  index-CXMa3-8B.css
app/frontend/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  styles.css
app/frontend/src/api/: client.ts  customers.ts  genie.ts  jobs.ts  types.ts
app/frontend/src/components/: AppShell.tsx  GenieWidget.tsx
app/frontend/src/hooks/: useDebounced.ts
app/frontend/src/pages/: CustomerDetail.tsx  Customers.tsx  Dashboard.tsx  Reports.tsx
lakebase/forward_etl/pattern_a_psycopg2/: merge_staging_to_gold.py
resources/: app.yml  jobs.yml  lakebase.yml
