[project]
name = "capstone-app"
version = "0.1.0"
description = "Customer 360 — Databricks Apps + Lakebase capstone"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "databricks-sdk>=0.40",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
